final fix of test schedulers